added registration admin crud+ui
