# server-go/pkg/domain/user.go
@@ -49,10 +49,11 @@ type PatchUser struct {
 }
 
 type FilterUser struct {
-	ID         *string `json:"id"`
-	TelegramID *int64  `json:"telegramId"`
-	FirstName  *string `json:"firstName"`
-	LastName   *string `json:"lastName"`
+	ID               *string `json:"id"`
+	TelegramID       *int64  `json:"telegramId"`
+	TelegramUsername *string `json:"telegramUsername"`
+	FirstName        *string `json:"firstName"`
+	LastName         *string `json:"lastName"`
 }
 
 type AdminPatchUser struct {
