# server-go/pkg/gateways/rest/router.go
@@ -10,6 +10,7 @@ import (
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_auth"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_courts"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_loyalties"
+	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_registrations"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_users"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/image"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/loyalty"
@@ -43,4 +44,5 @@ func setupRouter(ctx context.Context, r *gin.Engine, useCases usecase.Cases, cfg
 	admin_admins.Setup(v1, useCases)
 	admin_loyalties.Setup(v1, useCases)
 	admin_courts.Setup(v1, useCases)
+	admin_registrations.Setup(v1, useCases)
 }
